# streamlit-multipage-report

./: Hello.py  pyproject.toml
pages_folder/: DataFrame_Demo.py  Mapping_Demo.py  Plotting_Demo.py  __init__.py
